# cef-container

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  cmake-vs2015-win64.bat  config.default.json
content/: index.html
scripts/: build.sh  run.sh
src/: App.cpp  App.h  AppConfig.h  BrowserApp.cpp  BrowserApp.h  BrowserHandler.cpp  BrowserHandler.h  BrowserWindowDelegate.cpp  BrowserWindowDelegate.h  CMakeLists.txt  Content.cpp  Content.h  FileUtils.cpp  FileUtils.h  Handler.cpp  Handler.h  LinuxMain.cpp  MainLinux.cpp  MainWindows.cpp  Messages.cpp  Messages.h  PlatformUtils.cpp  PlatformUtils.h  RendererApp.cpp  RendererApp.h  WinMain.cpp  WindowDelegate.cpp  WindowDelegate.h
src/content/: ContentHandlerFactory.cpp  ContentHandlerFactory.h  ContentResourceHandler.cpp  ContentResourceHandler.h
src/content/io/: Archive.h  FileStream.h  LinuxArchive.h  StandardIoArchive.cpp  StandardIoArchive.h  StandardIoFileStream.cpp  StandardIoFileStream.h  WindowsArchive.h
src/core/: App.cpp  App.h  AppConfig.cpp  AppConfig.h  BrowserHandler.cpp  BrowserHandler.h  BrowserWindowDelegate.cpp  BrowserWindowDelegate.h  ConfigVisitor.cpp  ConfigVisitor.h  IconDownloadCallback.cpp  IconDownloadCallback.h  Messages.cpp  Messages.h
src/core/js/: JSContainer.cpp  JSContainer.h
src/platform/: PlatformUtils.h  PlatformUtilsLinux.cpp  PlatformUtilsWindows.cpp
